syntax = "proto3";

option csharp_namespace = "Crypto.gRPC.Protos";

package crypto;

service Crypto {
	rpc FetchCryptoItem (FetchCryptoItemRequest) returns (FetchCryptoItemRequestResponse) {}
}

message FetchCryptoItemRequest {
	string symbol = 1;
}

message FetchCryptoItemRequestResponse {
	string symbol = 1;
	float price = 2;
	string name = 3;
}